# dofus_protodump

./: README.md
cytrus/: Cargo.toml  manifiest.fbs
cytrus/src/: api.rs  main.rs  manifiest_generated.rs
protodump/: Cargo.toml  message.proto
protodump/src/: main.rs  proto_writer.rs
src/: main.rs  proto_result.rs  proto_writer.rs
